@@ -20,6 +20,8 @@ Incompatible changes
 Deprecated
 ----------
 
+* ``sphinx.domains.std.StandardDomain.add_object()``
+
 Features added
 --------------
 
@@ -27,6 +29,8 @@ Features added
   old stub file
 * #5923: autodoc: ``:inherited-members:`` option takes a name of anchestor class
   not to document inherited members of the class and uppers
+* #6558: glossary: emit a warning for duplicated glossary entry
+* #6558: std domain: emit a warning for duplicated generic objects
 
 Bugs fixed
 ----------
